<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
    android:id="@+id/username"
    android:hint="@string/Firstname"
    android:textColor="@color/white"
    android:textColorHint="@color/black"
        android:textSize="30sp"
    android:layout_margin="15dp"
    android:padding="10dp"
    android:inputType="text"
    android:autofillHints="" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/fetchbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/design_default_color_on_secondary"
        android:text="@string/fetch_data"
        android:textSize="25sp"/>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/Username"
 android:layout_below="@+id/fetchbtn"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="20dp"
    android:text="@string/Username"
    android:textColor="@color/black"
    android:textSize="35sp"
    android:textStyle="bold" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/gender"
        android:layout_below="@+id/Username"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Gender"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:id="@+id/phone"
    android:layout_below="@+id/gender"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginEnd="20dp"
    android:text="@string/phonenumber"
    android:textColor="@color/black"
    android:textSize="35sp"
    android:textStyle="bold"

/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/bio"
        android:layout_below="@+id/phone"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/short_bio"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"/>

</RelativeLayout>